CMS-only content integration across pages + placeholders when CMS is empty: - About: coaches/history/roadmap strictly from CMS with subtle placeholders; fixed JSX structure - Services: hero + services strictly from CMS with placeholders - Contact: hero + contact info + gym cards strictly from CMS with placeholders - Gyms: hero strictly from CMS - Fix: removed stray syntax in src/lib/cms.ts causing Vite parse error

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -11,8 +11,8 @@
   },
   "hero": {
     "title": "ALTIUS",
-    "subtitle": "Professional badminton club in Chisinau",
-    "description": "Training for all skill levels with experienced coaches in modern facilities",
+    "subtitle": "We create future champions and popularize badminton in Moldova.",
+    "description": "Our club is a place where everyone can find their path to success.",
     "joinButton": "Join Us",
     "learnMoreButton": "Watch Video",
     "badge": "Professional club since 2010",
@@ -78,7 +78,11 @@
       "title": "Pricing",
       "subtitle": "Choose your plan",
       "monthly": "Monthly",
+      "perMonth": "per month",
+      "perSession": "per session",
+      "perSessionShort": "per session",
       "annual": "Annual",
+      "currency": "lei",
       "save": "Save 20%",
       "mostPopular": "Most Popular",
       "getStarted": "Get Started",
@@ -88,6 +92,10 @@
         "medium": "Medium",
         "high": "High"
       }
+    },
+    "comparison": {
+      "title": "Format Comparison",
+      "subtitle": "Choose the optimal option for you"
     },
     "gyms": {
       "title": "Our Gyms",
@@ -135,15 +143,74 @@
       "title": "Our Team",
       "subtitle": "Meet our professional coaches",
       "experience": "Experience",
-      "specialization": "Specialization"
+      "specialization": "Specialization",
+      "founder": "Founder and Head Coach",
+      "masterSport": "Master of Sport",
+      "founderName": "Alexey Petrov",
+      "founderRole": "Head Coach and Club Founder",
+      "founderExp1": "15+ years of coaching experience",
+      "founderExp2": "Master of Sport in Badminton",
+      "founderExp3": "Trained over 500 students",
+      "founderDesc1": "Alexey founded ALTIUS in 2010 with the vision to develop badminton in Moldova. His professional approach and dedication have helped hundreds of students achieve their goals.",
+      "founderDesc2": "Under his leadership, the club has become one of Chisinau's leading training centers, known for high-quality coaching and a friendly atmosphere.",
+      "founderQuote": "Every student is unique. Our goal is to help everyone reach their full potential in badminton.",
+      "coaches": "Our Coaches",
+      "defaults": {
+        "0": {
+          "name": "Elena Petrova",
+          "role": "Head Coach",
+          "experience": "8 years experience",
+          "specialization": "Technique",
+          "achievements": ["Candidate Master of Sport", "Regional championship medalist"],
+          "description": "Specializes in beginners and developing proper stroke technique."
+        },
+        "1": {
+          "name": "Dmitry Kozlov",
+          "role": "Strength & Conditioning Coach",
+          "experience": "6 years experience",
+          "specialization": "Physical training",
+          "achievements": ["Master of Sport", "Certified fitness coach"],
+          "description": "Responsible for physical conditioning and injury prevention."
+        },
+        "2": {
+          "name": "Anna Smirnova",
+          "role": "Kids Coach",
+          "experience": "5 years experience",
+          "specialization": "Working with children",
+          "achievements": ["Candidate Master of Sport", "Pedagogical education"],
+          "description": "Focuses on training children 6–16 with a fun and engaging atmosphere."
+        }
+      }
     },
     "history": {
       "title": "Our History",
-      "subtitle": "The path from idea to leading badminton club"
+      "subtitle": "The path from idea to leading badminton club",
+      "development": "Club Development"
     },
+    "timeline": {
+      "2024": {
+        "q1": { "title": "Altius Launch", "text": "Opened our doors and held the first intakes for adults and teens." },
+        "q2": { "title": "Core team formation", "text": "Stabilized the schedule, formed the first club group and started the base rating." },
+        "q3": { "title": "First trophies", "text": "Club members won prizes at local tournaments." },
+        "q4": { "title": "Season summary", "text": "Held the club year final and awarded the best players and coaches." }
+      },
+      "2025": {
+        "q1": { "title": "Junior school", "text": "Launched kids groups, test camps and individual programs." },
+        "q2": { "title": "Club league", "text": "Regular internal matches and level-based mini leagues." },
+        "q3": { "title": "Expanding participation", "text": "Away tournaments, partnerships and sparring with regional clubs." },
+        "q4": { "title": "Altius Cup", "text": "Open club tournament with guests and an award ceremony." }
+      }
+    },
+    
     "roadmap": {
       "title": "Development Plans",
-      "subtitle": "Our goals for the coming years"
+      "subtitle": "Our goals for the coming years",
+      "items": {
+        "q3_2025": { "title": "Expanding participation", "desc": "Trips to tournaments, partnerships and sparring with regional clubs." },
+        "q4_2025": { "title": "Altius Cup", "desc": "Open club tournament with a ceremony and invited guests." },
+        "q1_2026": { "title": "U17 Academy", "desc": "Regular camps, tests, support and a competition calendar." },
+        "q2_2026": { "title": "Club league 2.0", "desc": "Tiered divisions, ratings, match days and live streams." }
+      }
     }
   },
   "contact": {
@@ -289,7 +356,15 @@
       "single": "Single session",
       "trial": "Trial session"
     },
-    "loading": "Loading gyms..."
+    "loading": "Loading gyms...",
+    "fallback": {
+      "byArrangement": "By arrangement",
+      "flexibleSchedule": "Flexible schedule tailored to your needs",
+      "weekdayDaily": "Daily weekday training",
+      "improvementGroup": "Improvement group",
+      "intensiveTraining": "Intensive training for competition preparation",
+      "trainingForAdults": "Training for adult badminton enthusiasts"
+    }
   },
   "gallery": {
     "title": "Gallery",
@@ -340,13 +415,28 @@
     "searchPlaceholder": "Search news...",
     "readMore": "Read More",
     "loadingText": "Loading...",
-    "noNews": "No materials yet"
+    "noNews": "No materials yet",
+    "postNotFound": "Post not found",
+    "backToList": "Back to news"
   },
   "footer": {
     "description": "Professional badminton club in Chisinau",
     "quickLinks": "Quick Links",
     "followUs": "Follow Us",
-    "allRightsReserved": "All rights reserved"
+    "allRightsReserved": "All rights reserved",
+    "contact": {
+      "address": "Chisinau, Example str. 123",
+      "phone": "+373 60 123 456",
+      "email": "info@altius.md",
+      "hours": {
+        "weekdays": "Mon-Fri: 06:00-22:00",
+        "weekends": "Sat-Sun: 08:00-20:00"
+      }
+    },
+    "legal": {
+      "privacy": "Privacy Policy",
+      "terms": "Terms of Use"
+    }
   },
   "common": {
     "loading": "Loading...",
@@ -362,5 +452,106 @@
     "page": "Page",
     "of": "of",
     "showing": "Showing"
+  }
+  ,
+  "home": {
+    "achievements": {
+      "title": "Our Achievements",
+      "subtitle": "Over the years we have achieved impressive results and nurtured many talented athletes",
+      "items": {
+        "champions": {
+          "title": "Moldova Champions",
+          "description": "Our students became national champions"
+        },
+        "medals": {
+          "title": "Tournament Medals",
+          "description": "Medals won at national competitions"
+        },
+        "athletes": {
+          "title": "Active Athletes",
+          "description": "Regularly training in our club"
+        },
+        "years": {
+          "title": "Years of Successful Work",
+          "description": "Developing badminton in Moldova since 2010"
+        }
+      },
+      "timeline": {
+        "title": "Club Development History",
+        "defaults": {
+          "2010": {
+            "title": "Club Founded",
+            "description": "Opened the first hall with 4 courts"
+          },
+          "2015": {
+            "title": "Expansion",
+            "description": "Opened the second hall, grew to 200 members"
+          },
+          "2018": {
+            "title": "International Recognition",
+            "description": "First medals at international tournaments"
+          },
+          "2020": {
+            "title": "Training Center",
+            "description": "Official status as a regional training center"
+          },
+          "2024": {
+            "title": "Modernization",
+            "description": "Complete upgrade of equipment and infrastructure"
+          }
+        }
+      },
+      "cta": "Become part of our success story!"
+    },
+    "services": {
+      "title": "Our Services",
+      "subtitle": "Professional training for all levels",
+      "more": "Learn more"
+    },
+    "worldNews": {
+      "title": "World News",
+      "noMaterials": "No materials",
+      "viewAll": "View all news",
+      "tagWorld": "🌍 World"
+    },
+    "embeds": {
+      "title": "Club News and Events",
+      "noMaterials": "No materials",
+      "badgeEvent": "🎫 Event",
+      "badgeClub": "🏸 Club",
+      "viewAll": "Show all news"
+    },
+    "bwf": {
+      "title": "BWF — World News",
+      "subtitle": "Automatically collected news from bwfbadminton.com",
+      "loading": "Loading BWF news...",
+      "noMaterials": "No materials",
+      "noData": "No BWF news data",
+      "error": "Failed to load BWF news",
+      "readOn": "Read on bwfbadminton.com →"
+    },
+    "events": {
+      "title": "Events",
+      "noItems": "No events yet",
+      "badge": "🎫 Event",
+      "viewAll": "All events"
+    },
+    "ubf": {
+      "title": "News & Events",
+      "subtitle1": "Follow the latest club news and world badminton events.",
+      "subtitle2": "Stay up to date with all key happenings in our sports community.",
+      "clubTitle": "Club News",
+      "worldTitle": "World News",
+      "eventsTitle": "Events",
+      "ctaTitle": "Don't miss important events!",
+      "ctaSubtitle": "Subscribe to our newsletter to get updates on tournaments, masterclasses and club news.",
+      "btnAllNews": "All news",
+      "btnCalendar": "Events calendar"
+    },
+    "clubNews": {
+      "title": "Club News",
+      "badge": "🏸 Club",
+      "readOnFb": "Read on Facebook"
+    }
   }
 }
