--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -11,8 +11,8 @@
   },
   "hero": {
     "title": "ALTIUS",
-    "subtitle": "Профессиональный бадминтон клуб в Кишиневе",
-    "description": "Тренировки для всех уровней подготовки с опытными тренерами в современных залах",
+    "subtitle": "Мы создаем будущих чемпионов и популяризируем бадминтон в Молдове.",
+    "description": "Наш клуб — это место, где каждый может найти свой путь к успеху.",
     "joinButton": "Присоединиться",
     "learnMoreButton": "Посмотреть видео",
     "badge": "Профессиональный клуб с 2010 года",
@@ -27,8 +27,8 @@
   "services": {
     "hero": {
       "badge": "Профессиональное обучение",
-      "title": "Наши услуги",
-      "subtitle": "Выберите подходящий формат тренировок для достижения ваших целей",
+      "title": "Тренировки для всех",
+      "subtitle": "От начинающих до профессионалов — у нас есть программа для каждого",
       "stats": {
         "students": "500+ учеников",
         "experience": "15+ лет опыта",
@@ -79,6 +79,7 @@
       "subtitle": "Выберите подходящий план",
       "perSession": "за занятие",
       "perMonth": "в месяц",
+      "perSessionShort": "за занятие",
       "monthly": "Месячно",
       "annual": "Годовой",
       "currency": "лей",
@@ -145,7 +146,101 @@
     "heroSubtitle": "Профессиональный бадминтон с 2010 года",
     "heroDescription": "Мы создаем сообщество любителей бадминтона и готовим чемпионов",
     "description": "Клуб Altius - это место, где каждый может найти свой путь в бадминтоне. Мы предлагаем тренировки для всех уровней подготовки.",
-    "mission": "Наша миссия - популяризация бадминтона в Молдове и подготовка спортсменов высокого уровня."
+    "mission": "Наша миссия - популяризация бадминтона в Молдове и подготовка спортсменов высокого уровня.",
+    "timeline": {
+      "2024": {
+        "q1": { "title": "Старт Altius", "text": "Открыли двери и провели первые наборы для взрослых и подростков." },
+        "q2": { "title": "Формирование ядра команды", "text": "Стабилизировали расписание, собрали первую клубную группу и стартовали базовый рейтинг." },
+        "q3": { "title": "Первые трофеи", "text": "Участники клуба взяли призовые места на локальных турнирах." },
+        "q4": { "title": "Итоги сезона", "text": "Провели клубный финал года, наградили лучших игроков и тренеров." }
+      },
+      "2025": {
+        "q1": { "title": "Школа юниоров", "text": "Запустили детские группы, тест‑сборы, индивидуальные программы." },
+        "q2": { "title": "Клубная лига", "text": "Регулярные внутренние матчи и мини‑лиги по уровням." },
+        "q3": { "title": "Расширение участия", "text": "Выездные турниры, партнёрства, спарринги с другими клубами региона." },
+        "q4": { "title": "Altius Cup", "text": "Открытый турнир клуба с приглашёнными гостями и праздничной церемонией." }
+      }
+    },
+    "roadmap": {
+      "items": {
+        "q3_2025": { "title": "Расширение участия", "desc": "Выезды на турниры, партнёрства и спарринги с клубами региона." },
+        "q4_2025": { "title": "Altius Cup", "desc": "Открытый турнир клуба с церемонией и приглашёнными гостями." },
+        "q1_2026": { "title": "Академия U17", "desc": "Регулярные сборы, тесты, сопровождение и календарь стартов." },
+        "q2_2026": { "title": "Клубная лига 2.0", "desc": "Уровневые дивизионы, рейтинги, матч‑дни и трансляции." }
+      }
+    },
+    "history": {
+      "title": "Наша история",
+      "subtitle": "Путь от идеи до ведущего бадминтон‑клуба",
+      "development": "Развитие клуба"
+    },
+    "hero": {
+      "badge": "О клубе ALTIUS",
+      "title": "Профессиональный бадминтон‑клуб",
+      "subtitle": "Мы развиваем бадминтон в Молдове с 2010 года",
+      "description": "Наша миссия — сделать бадминтон доступным каждому и помочь каждому раскрыть свой потенциал"
+    },
+    "stats": {
+      "experience": "Опыт",
+      "experienceDesc": "Лет опыта",
+      "participants": "Участники",
+      "participantsDesc": "Довольных учеников",
+      "courts": "Залы/корты",
+      "courtsDesc": "Современные площадки",
+      "tournaments": "Турниры",
+      "tournamentsDesc": "Организованные турниры"
+    },
+    "values": {
+      "title": "Наши ценности",
+      "subtitle": "Что делает нас особенными",
+      "professionalism": "Профессионализм",
+      "professionalismDesc": "Качество тренировок с сертифицированными тренерами и современным оборудованием",
+      "friendliness": "Дружелюбие",
+      "friendlinessDesc": "Приветственная атмосфера для игроков любого возраста и уровня",
+      "results": "Ориентация на результат",
+      "resultsDesc": "Индивидуальный подход к каждому ученику для максимального прогресса"
+    },
+    "team": {
+      "title": "Наша команда",
+      "subtitle": "Познакомьтесь с нашими профессиональными тренерами",
+      "founder": "Основатель и главный тренер",
+      "masterSport": "Мастер спорта",
+      "founderName": "Алексей Петров",
+      "founderRole": "Главный тренер и основатель клуба",
+      "founderExp1": "15+ лет тренерского опыта",
+      "founderExp2": "Мастер спорта по бадминтону",
+      "founderExp3": "Обучил более 500 учеников",
+      "founderDesc1": "Алексей основал ALTIUS в 2010 году с целью развивать бадминтон в Молдове. Профессиональный подход и вовлеченность помогли сотням учеников достигать своих целей.",
+      "founderDesc2": "Под его руководством клуб стал одним из ведущих центров подготовки в Кишиневе, известным качеством тренировок и дружелюбной атмосферой.",
+      "founderQuote": "Каждый ученик уникален. Наша задача — помочь каждому раскрыть свой максимум в бадминтоне.",
+      "coaches": "Наши тренеры",
+      "defaults": {
+        "0": {
+          "name": "Елена Петрова",
+          "role": "Старший тренер",
+          "experience": "8 лет опыта",
+          "specialization": "Техника игры",
+          "achievements": ["КМС по бадминтону", "Призёр чемпионата области"],
+          "description": "Специализируется на работе с начинающими игроками и развитии правильной техники ударов."
+        },
+        "1": {
+          "name": "Дмитрий Козлов",
+          "role": "Тренер по физподготовке",
+          "experience": "6 лет опыта",
+          "specialization": "Физическая подготовка",
+          "achievements": ["Мастер спорта", "Сертифицированный фитнес-тренер"],
+          "description": "Отвечает за физическую подготовку спортсменов и профилактику травм."
+        },
+        "2": {
+          "name": "Анна Смирнова",
+          "role": "Детский тренер",
+          "experience": "5 лет опыта",
+          "specialization": "Работа с детьми",
+          "achievements": ["КМС по бадминтону", "Педагогическое образование"],
+          "description": "Специализируется на обучении детей от 6 до 16 лет, создании игровой атмосферы на тренировках."
+        }
+      }
+    }
   },
   "contact": {
     "title": "Контакты",
@@ -290,7 +385,15 @@
       "single": "Разовое занятие",
       "trial": "Пробное занятие"
     },
-    "loading": "Загрузка залов..."
+    "loading": "Загрузка залов...",
+    "fallback": {
+      "byArrangement": "По договоренности",
+      "flexibleSchedule": "Гибкое расписание под ваши потребности",
+      "weekdayDaily": "Ежедневные тренировки в будние дни",
+      "improvementGroup": "Группа совершенствования",
+      "intensiveTraining": "Интенсивные тренировки для подготовки к соревнованиям",
+      "trainingForAdults": "Тренировки для взрослых любителей бадминтона"
+    }
   },
   "gallery": {
     "title": "Галерея",
@@ -341,13 +444,28 @@
     "searchPlaceholder": "Поиск новостей...",
     "readMore": "Читать",
     "loadingText": "Загрузка...",
-    "noNews": "Пока нет материалов"
+    "noNews": "Пока нет материалов",
+    "postNotFound": "Материал не найден",
+    "backToList": "Назад к новостям"
   },
   "footer": {
     "description": "Профессиональный бадминтон клуб в Кишиневе",
     "quickLinks": "Быстрые ссылки",
     "followUs": "Следите за нами",
-    "allRightsReserved": "Все права защищены"
+    "allRightsReserved": "Все права защищены",
+    "contact": {
+      "address": "Кишинев, ул. Пример 123",
+      "phone": "+373 60 123 456",
+      "email": "info@altius.md",
+      "hours": {
+        "weekdays": "Пн-Пт: 06:00-22:00",
+        "weekends": "Сб-Вс: 08:00-20:00"
+      }
+    },
+    "legal": {
+      "privacy": "Политика конфиденциальности",
+      "terms": "Условия использования"
+    }
   },
   "common": {
     "loading": "Загрузка...",
@@ -363,5 +481,112 @@
     "page": "Страница",
     "of": "из",
     "showing": "Показано"
+  }
+  ,
+  "home": {
+    "achievements": {
+      "title": "Наши достижения",
+      "subtitle": "За годы работы мы достигли впечатляющих результатов и воспитали множество талантливых спортсменов",
+      "items": {
+        "champions": {
+          "title": "Чемпионы Молдовы",
+          "description": "Наших воспитанников стали чемпионами страны"
+        },
+        "medals": {
+          "title": "Медали на турнирах",
+          "description": "Завоеванных медалей на национальных соревнованиях"
+        },
+        "athletes": {
+          "title": "Активных спортсменов",
+          "description": "Регулярно тренируются в нашем клубе"
+        },
+        "years": {
+          "title": "Лет успешной работы",
+          "description": "Развиваем бадминтон в Молдове с 2010 года"
+        }
+      },
+      "timeline": {
+        "title": "История развития клуба",
+        "defaults": {
+          "2010": {
+            "title": "Основание клуба",
+            "description": "Открытие первого зала с 4 кортами"
+          },
+          "2015": {
+            "title": "Расширение",
+            "description": "Открытие второго зала, рост до 200 участников"
+          },
+          "2018": {
+            "title": "Международное признание",
+            "description": "Первые медали на международных турнирах"
+          },
+          "2020": {
+            "title": "Центр подготовки",
+            "description": "Официальный статус регионального центра подготовки"
+          },
+          "2024": {
+            "title": "Модернизация",
+            "description": "Полное обновление оборудования и инфраструктуры"
+          }
+        }
+      },
+      "cta": "Станьте частью нашей истории успеха!"
+    },
+    "services": {
+      "title": "Наши услуги",
+      "subtitle": "Профессиональные тренировки для всех уровней подготовки",
+      "more": "Узнать больше"
+    },
+    "worldNews": {
+      "title": "Мировые новости",
+      "noMaterials": "Нет материалов",
+      "viewAll": "Смотреть все новости",
+      "tagWorld": "🌍 Мир"
+    },
+    "embeds": {
+      "title": "Новости клуба и события",
+      "noMaterials": "Нет материалов",
+      "badgeEvent": "🎫 Событие",
+      "badgeClub": "🏸 Клуб",
+      "viewAll": "Показать все новости"
+    },
+    "newsSection": {
+      "title": "Новости и События",
+      "subtitle": "Следите за последними новостями клуба и мировыми событиями в бадминтоне",
+      "category": {
+        "news": "Новости",
+        "events": "События"
+      },
+      "latest": "Последние новости",
+      "world": "Мировые новости",
+      "viewAll": "Все новости и события"
+    },
+    "bwf": {
+      "title": "BWF — Мировые новости",
+      "subtitle": "Автоматически собранные новости с bwfbadminton.com",
+      "loading": "Загрузка новостей BWF...",
+      "noMaterials": "Нет материалов",
+      "noData": "Нет данных о новостях BWF",
+      "error": "Ошибка загрузки новостей BWF",
+      "readOn": "Читать на bwfbadminton.com →"
+    },
+    "events": {
+      "title": "События",
+      "noItems": "Пока нет событий",
+      "badge": "🎫 Событие",
+      "viewAll": "Все события"
+    },
+    "ubf": {
+      "title": "Новости и События",
+      "subtitle1": "Следите за последними новостями клуба и мировыми событиями в бадминтоне.",
+      "subtitle2": "Будьте в курсе всех важных событий нашего спортивного сообщества.",
+      "clubTitle": "Новости клуба",
+      "worldTitle": "Мировые новости",
+      "eventsTitle": "События",
+      "ctaTitle": "Не пропустите важные события!",
+      "ctaSubtitle": "Подпишитесь на нашу рассылку и получайте уведомления о новых турнирах, мастер-классах и новостях клуба.",
+      "btnAllNews": "Все новости",
+      "btnCalendar": "Календарь событий"
+    }
   }
 }
