--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -162,6 +162,13 @@
       }
     },
     "roadmap": {
+      "title": "План развития",
+      "subtitle": "Наши цели на ближайшие годы",
+      "scrollHint": "Прокрутите, чтобы изучить наш путь",
+      "swipeHint": "Свайпните для навигации",
+      "done": "Выполнено",
+      "inProgress": "В процессе",
+      "planned": "Запланировано",
       "items": {
         "q3_2025": { "title": "Расширение участия", "desc": "Выезды на турниры, партнёрства и спарринги с клубами региона." },
         "q4_2025": { "title": "Altius Cup", "desc": "Открытый турнир клуба с церемонией и приглашёнными гостями." },
