--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -179,6 +179,9 @@
     "history": {
       "title": "Наша история",
       "subtitle": "Путь от идеи до ведущего бадминтон‑клуба",
+      "emptySection": "Секция истории не заполнена в CMS",
+      "showAll": "Показать все события",
+      "collapse": "Свернуть",
       "development": "Развитие клуба"
     },
     "hero": {
@@ -210,6 +213,7 @@
     "team": {
       "title": "Наша команда",
       "subtitle": "Познакомьтесь с нашими профессиональными тренерами",
+      "emptySection": "Секция тренеров не заполнена в CMS",
       "founder": "Основатель и главный тренер",
       "masterSport": "Мастер спорта",
       "founderName": "Алексей Петров",
