about/cms: team fallback from separate docs; i18n fixes; schema fieldsets; founder localization and localized GROQ; remove hardcoded texts

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -256,6 +256,7 @@
   "contact": {
     "title": "Контакты",
     "subtitle": "Свяжитесь с нами",
+    "emptySection": "Контактная информация не заполнена в CMS",
     "heroTitle": "Свяжитесь с нами",
     "heroSubtitle": "Мы всегда готовы ответить на ваши вопросы",
     "heroDescription": "Позвоните, напишите или приходите к нам в любой из наших залов",
